Fix(style) Turns summary tables into lists on smaller display sizes

--- a/src/styles/components/uniSummary/__uniSummary.sass
+++ b/src/styles/components/uniSummary/__uniSummary.sass
@@ -44,6 +44,10 @@ uni-summary .unisummary
         order: 2
         flex-basis: 100%
 
+    @include media('medium', 'max-width')
+        &
+            display: block
+
 uni-summary.-is-dirty
     .unisummary
         color: $uni-color-scale7
